<resources>
    <string name="app_name">Classify</string>
    <string name="hint_gender">I am</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_register">REGISTER</string>
    <string name="txt_login">Already have an account?</string>
    <string name="txt_link_login">Login!</string>
    <string name="txt_sign_up">Don\'t have an account?</string>
    <string name="btn_sign_up_link">Create one!</string>
    <string name="title_activity_main">Classify</string>
    <string name="spinnerTitle">Grading Rubric</string>
    <string-array name="rubric_array">
        <item>Add a grading rubric</item>
        <item>Attendance</item>
        <item>Exams</item>
        <item>Final Exam</item>
        <item>Homework</item>
        <item>Midterm Exam</item>
        <item>Projects</item>
        <item>Quizzes</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to new class -->
    <string name="add_new_class">Add a new class</string>
    <string name="location">Location</string>
    <string name="professor">Professor</string>
    <string name="time_and_date">Select date and time</string>
    <string name="start_time">Start</string>
    <string name="end_time">End</string>
    <string name="select_grade_weights">Select grade weights</string>
    <!-- Strings related to class view -->
    <string name="grade_standing">Grades received for this class</string>
    <string name="add_new_grade">Add a new grade</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
