<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.classify.newClass">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/AppTheme">

        <TextView
            android:id="@+id/add_new_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add_new_class"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/White" />
    </android.support.v7.widget.Toolbar>

    <!-- Class Name & Color palette -->
    <ImageView
        android:id="@+id/color_palette"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_gravity="center|end"
        android:background="@drawable/color_palette"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/classNameInput"
        app:layout_constraintLeft_toRightOf="@id/editProfLayout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/classNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/bpDark_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_edit_small"
            android:drawableTint="@color/bpLight_gray"
            android:ems="15"
            android:hint="Class name"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <!-- Professor name and icon -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editProfLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/bpDark_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classNameInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editProf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_person_outline_small"
            android:ems="15"
            android:hint="@string/professor"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>
    <!-- Location -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/editLocationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/bpDark_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editProfLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_location_small"
            android:ems="15"
            android:hint="@string/location"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <!-- Date image icon and custom date picker -->

    <TextView
        android:id="@+id/select_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:text="@string/time_and_date"
        android:textAppearance="@style/medium_bold"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editLocationLayout" />

    <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
        android:id="@+id/group_weekdays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/select_date_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:tbgChildSpacing="4dp">

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S"/>

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M"/>
        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T"/>
        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="W"/>
        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T"/>
        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F"/>
        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S"/>
    </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>
    <!-- Start and end time icon and time picker view -->

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="21dp"
        android:text="@string/start_time"
        android:textColor="@color/bpDark_gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/group_weekdays" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:textColor="@color/bpDark_gray"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@id/startTime"
        app:layout_constraintTop_toBottomOf="@id/group_weekdays" />

    <!-- Grading rubric, includes:
        A grading icon
        A spinner with different rubrics
        A listview that holds the chosen rubric
        Listview row layout is implented in grading_list_view_row.xml_row.xml
     -->

    <TextView
        android:id="@+id/select_grade_weights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:text="@string/time_and_date"
        android:textAppearance="@style/medium_bold"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startTime" />


    <Spinner
        android:id="@+id/rubric_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:prompt="@string/spinnerTitle"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_grade_weights" />

    <ListView
        android:id="@+id/list_view"
        style="@style/ListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rubric_spinner" />
    <!-- android:visibility="invisible" -->

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:text="Save"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
